--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="app"></div>
 <script type="module">
-    import MTPC from "./dist/main.js"
+    import MTPC from "./dist/index.mjs"
 
     //example part
     async function initializeThreads() {
@@ -29,7 +29,7 @@
             let value = 0
             for (let i = 0; i < 1000000000; i++) value += i
 
-            const lastTime = message.data.exec_time ?? 0
+            const lastTime = message.data && message.data.exec_time ? message.data.exec_time :  0
             postMessage({
                 exec_time: performance.now() - start + lastTime,
                 message: message.data
